Add heading to Site Search

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -694,6 +694,8 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
     </main>
 
     <aside>
+      <h1>ウェブサイト内から検索</h1>
+
       <form action="https://www.google.com/search" role="search">
         <input name="as_sitesearch" type="hidden" value="hail2u.net">
         <input name="q" placeholder="例: Blosxom" size="32" type="search" aria-label="検索">
