--- a/src/css/test.html
+++ b/src/css/test.html
@@ -126,9 +126,10 @@
         <ul class="debug-colors">
           <li>前景色</li>
           <li>前景色（明るめ）</li>
+          <li>アクセント</li>
+          <li>アクセント（明るめ）</li>
           <li>背景色</li>
           <li>背景色（暗め）</li>
-          <li>アクセント</li>
         </ul>
       </section>
 
