--- a/src/css/test.html
+++ b/src/css/test.html
@@ -40,7 +40,7 @@
 
       <nav>
         <ul>
-          <li><a href="https://hail2u.net/blog/">ウェブログ</a></li>
+          <li><a href="https://hail2u.net/blog/">過去ログ</a></li>
           <li><a href="https://hail2u.net/about/"><mark>いろいろ</mark></a></li>
         </ul>
       </nav>
