--- a/src/css/test.html
+++ b/src/css/test.html
@@ -28,7 +28,7 @@
       <h1><a href="https://hail2u.net/"><svg width="608" height="512" aria-labelledby="logo-title" role="img" viewBox="0 0 608 512"><title id="logo-title">Hail2u.net</title><path d="M32 0v512h96V288h192v224h96V0h-96v208H128V0zm480 416v96h96v-96z"/></svg></a></h1>
 
       <nav>
-        <p><a href="https://hail2u.net/blog/">過去ログ</a></p>
+        <p><a href="https://hail2u.net/blog/">過去ログ</a> • <a href="https://hail2u.net/about/">いろいろ</a></p>
       </nav>
     </header>
 
