Separate with nbsp

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -29,8 +29,8 @@
 
       <nav>
         <p><a href="https://hail2u.net/blog/">過去ログ</a>
-          • <a href="https://hail2u.net/documents/">特集</a>
-          • <mark><a href="https://hail2u.net/about/">いろいろ</a></mark></p>
+          &#xa0;&#xa0;&#xa0;<a href="https://hail2u.net/documents/">特集</a>
+          &#xa0;&#xa0;&#xa0;<mark><a href="https://hail2u.net/about/">いろいろ</a></mark></p>
       </nav>
     </header>
 
@@ -693,7 +693,8 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
     </aside>
 
     <footer>
-      <p><a href="https://creativecommons.org/licenses/by/4.0/" rel="license">CC BY</a> • <a href="https://hail2u.net/feed" rel="alternate">RSS</a></p>
+      <p><a href="https://creativecommons.org/licenses/by/4.0/" rel="license">CC BY</a>
+        &#xa0;&#xa0;&#xa0;<a href="https://hail2u.net/feed" rel="alternate">RSS</a></p>
 
       <address><a href="https://kyonagashima.com/" rel="author">ながしまきょう</a>が作っています</address>
     </footer>
