--- a/src/css/test.html
+++ b/src/css/test.html
@@ -7,9 +7,7 @@
 
     <title>スタイル・ガイド - Hail2u.net</title>
 
-    <link href="https://creativecommons.org/licenses/by/4.0/" rel="license">
     <link href="https://hail2u.net/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
-    <link href="https://hail2u.net/feed" rel="alternate" type="application/rss+xml">
 
     <link href="./main.css" media="not print" rel="stylesheet">
     <link href="./debug.css" media="not print" rel="stylesheet">
@@ -699,7 +697,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
     <footer>
       <ul>
         <li><a href="https://creativecommons.org/licenses/by/4.0/" rel="license">CC BY</a></li>
-        <li><a href="https://hail2u.net/feed" rel="alternate">RSS</a></li>
+        <li><a href="https://hail2u.net/feed" rel="alternate" type="application/rss+xml">RSS</a></li>
       </ul>
 
       <address><a href="https://kyonagashima.com/" rel="author">ながしまきょう</a>が作っています</address>
