Separate with slash for legibility

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -696,7 +696,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 
     <footer>
       <ul>
-        <li><a href="https://creativecommons.org/licenses/by/4.0/" rel="license">CC BY</a></li>
+        <li><a href="https://creativecommons.org/licenses/by/4.0/" rel="license">CC/BY</a></li>
         <li><a href="https://hail2u.net/feed" rel="alternate" type="application/rss+xml">RSS</a></li>
       </ul>
 
