Update color scheme to black and white monochrome

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -116,6 +116,8 @@
         <ul class="debug-colors">
           <li>前景色</li>
           <li>背景色</li>
+          <li>明るい前景色</li>
+          <li>暗い背景色</li>
         </ul>
       </section>
 
