Fix code example

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -560,7 +560,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 
         <p>見出しに使うこともできます。</p>
 
-        <pre><code class="language-html">&lt;h1 <mark>class=&quot;note&quot;</mark>&gt;...&lt;/h1&gt;
+        <pre><code class="language-html">&lt;h1 <mark>class=&quot;hang&quot;</mark>&gt;...&lt;/h1&gt;
 </code></pre>
 
         <aside class="hang">
