Use main element for article

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -44,29 +44,31 @@
 
         <h1>スタイル・ガイド</h1>
 
-        <figure class="fill">
-          <img alt="Placeholder Image" height="1440" src="https://unsplash.it/2560/1440/" width="2560">
-        </figure>
+        <main>
+          <figure class="fill">
+            <img alt="Placeholder Image" height="1440" src="https://unsplash.it/2560/1440/" width="2560">
+          </figure>
 
-        <p>マークアップはHTMLのソースを、スタイルについてはこのページで参照されている非圧縮のCSSファイルを参照してください。このページに限ってはマークアップにおかしいところが多々ありますが、その多くはプレビューを作る上でのやむを得ない事情によるものです。</p>
+          <p>マークアップはHTMLのソースを、スタイルについてはこのページで参照されている非圧縮のCSSファイルを参照してください。このページに限ってはマークアップにおかしいところが多々ありますが、その多くはプレビューを作る上でのやむを得ない事情によるものです。</p>
 
-        <section>
-          <h1>デバッグ</h1>
+          <section>
+            <h1>デバッグ</h1>
 
-          <p>レイアウトの位置確認のために、空いているところをダブルクリックするとグリッドと要素のアウトラインをトグルすることができます。グリッドはCSSグラデーションを利用した簡単なもののため、描画領域の幅によっては数ピクセル程ずれることがあります。</p>
+            <p>レイアウトの位置確認のために、空いているところをダブルクリックするとグリッドと要素のアウトラインをトグルすることができます。グリッドはCSSグラデーションを利用した簡単なもののため、描画領域の幅によっては数ピクセル程ずれることがあります。</p>
 
-          <p>また、最初の見出しをクリックすることでホームでのスタイルへの切り替えを、日付をクリックすることでアイキャッチ画像の切り替えを、それぞれ行うことができます。</p>
-        </section>
+            <p>また、最初の見出しをクリックすることでホームでのスタイルへの切り替えを、日付をクリックすることでアイキャッチ画像の切り替えを、それぞれ行うことができます。</p>
+          </section>
 
-        <section>
-          <h1>印刷向けスタイルシート</h1>
+          <section>
+            <h1>印刷向けスタイルシート</h1>
 
-          <p>必要のないものを隠し、適切な位置で改行されるように調節しています。</p>
-        </section>
+            <p>必要のないものを隠し、適切な位置で改行されるように調節しています。</p>
+          </section>
 
-        <hr>
+          <hr>
 
-        <p>このページ、およびこのページから参照されているCSSやJavaScriptファイルは最小化されていません。</p>
+          <p>このページ、およびこのページから参照されているCSSやJavaScriptファイルは最小化されていません。</p>
+        </main>
       </article>
 
       <section id="toc">
