Add unique tagline

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -35,7 +35,7 @@
         </ul>
       </nav>
 
-      <p>ウェブサイト制作とか<br>日常生活や散歩の記録とか<br>よくわからない殴り書きとか</p>
+      <p>スタイルのプレビューとか<br>マークアップ例とか<br>雑多な決まりごととか</p>
     </header>
 
     <main>
