--- a/src/css/test.html
+++ b/src/css/test.html
@@ -35,7 +35,7 @@
         </ul>
       </nav>
 
-      <p>スタイルのプレビューとか<br>マークアップ例とか<br>雑多な決まりごととか</p>
+      <p>プレビューとか<br>マークアップ例とか<br>雑多な決まりごととか</p>
     </header>
 
     <main>
