--- a/src/css/test.html
+++ b/src/css/test.html
@@ -13,13 +13,13 @@
     <link href="./debug.css" media="not print" rel="stylesheet">
     <link href="./print.css" media="only print" rel="stylesheet">
 
-    <script defer src="../js/ellipsis-title.js"></script>
-    <script defer src="../js/reldate.js"></script>
-    <script defer src="../js/site-search-focus.js"></script>
-    <script defer src="../js/unutm.js"></script>
-    <script defer src="../js/toggle-column.js"></script>
-    <script defer src="../js/toggle-eyecatch.js"></script>
-    <script defer src="../js/toggle-outline.js"></script>
+    <script async src="../js/ellipsis-title.js"></script>
+    <script async src="../js/reldate.js"></script>
+    <script async src="../js/site-search-focus.js"></script>
+    <script async src="../js/unutm.js"></script>
+    <script async src="../js/toggle-column.js"></script>
+    <script async src="../js/toggle-eyecatch.js"></script>
+    <script async src="../js/toggle-outline.js"></script>
   </head>
 
   <body class="js-debug-columns js-debug-elements">
