Remove style for printing

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -9,9 +9,8 @@
 
     <link href="https://hail2u.net/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
 
-    <link href="./main.css" media="not print" rel="stylesheet">
-    <link href="./debug.css" media="not print" rel="stylesheet">
-    <link href="./print.css" media="only print" rel="stylesheet">
+    <link href="./main.css" rel="stylesheet">
+    <link href="./debug.css" rel="stylesheet">
 
     <script async src="../js/ellipsis-title.js"></script>
     <script async src="../js/reldate.js"></script>
