Update hr explanation

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -223,7 +223,7 @@
         <section>
           <h1>水平線</h1>
 
-          <p>主に暗黙のセクションの区切りが挿入される所に恣意的に使用しています。線の代わりに表示されるアステリズムはSVGです。</p>
+          <p>主に暗黙のセクションの区切りが挿入される所に恣意的に使用しています。線の代わりに表示されるアスタリスクはテキストです。</p>
 
           <hr>
 
